# waydroid-x11

./: .gitignore  Makefile.am  README.md  configure.ac  waydroid-drm.1.in  waydroid-drm.desktop  waydroid-drm.in  waydroid-drm.ini  waydroid-x11.1.in  waydroid-x11.desktop  waydroid-x11.in  waydroid-x11.ini  weston.ini
